--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,11 @@ captures/
 
 # Intellij
 *.iml
-.idea/workspace.xml
+.idea
+images/
+app/fabric.properties
 
 # Keystore files
 *.jks
+
+.DS_Store
