--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,12 +27,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    testCompile 'junit:junit:4.12'
 
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-v13:25.3.1'
 
-    compile 'com.github.MatteoBattilana:WeatherView:1.1.0.8'
-
-    testCompile 'junit:junit:4.12'
+    compile 'com.plattysoft.leonids:LeonidsLib:1.3.2'
 }
