--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-v13:25.3.1'
 
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.plattysoft.leonids:LeonidsLib:1.3.2'
 }
