--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-v13:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+
+    compile 'com.google.android:flexbox:0.3.0-alpha3'
 
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.plattysoft.leonids:LeonidsLib:1.3.2'
